Prevent theme toggle flicker

--- a/assets/css/extended/theme-toggle.css
+++ b/assets/css/extended/theme-toggle.css
@@ -42,3 +42,7 @@
   visibility: visible !important;
   opacity: 1 !important;
 }
+
+#theme-toggle svg {
+  display: block;
+}
